web/css/main.css
.error, .error_list li {
  color: #d06553;
  font-weight: bold;
}

body {
  background-color: #201913;
  color: #E3DDC9;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 14px;
}

a:link {
  text-decoration: underline;
  color: #D4D4D4;
}

a:visited {
  text-decoration: underline;
  color: #D4D4D4;
}

a:active {
  text-decoration: underline;
  color: #D4D4D4;
}

a:hover {
  text-decoration: none;
  color: #D4D4D4;
}

#logName {
  font-size: 30px;
  font-weight: bold;
  text-align: center;
}

#score {
  font-size: 20px;
  font-weight: bold;
  text-align: center;
  margin-left: auto;
  margin-right: auto;
  float: left;
}

#score .Blue {
  color: #79b3d2;
}

#score .Red {
  color: #d06553;
}

#score .winSeparator {
  font-size: 40px;
  font-weight: bold;
  text-align: center;
}

img.Blue {
  border: 2px solid #79b3d2;
}

img.Red {
  border: 2px solid #d06553;
}

.statTable, .statTable td {
  /*border: 1px solid #D4D4D4;*/
  border-collapse: collapse;
  text-align: center;
  font-size: 10px;
}

.txtnowrap {
  white-space:nowrap;
}

.infoBox {
  margin-bottom: 1em;
  text-align: center;
}

div.infoBox .header {
  padding: 0 3px 0 3px;
}

.infoBox table {
	border-collapse: collapse;
}

.infoBox tr {
	background-color: #201913; /*from .ui-widget-content*/
	color: #e3ddc9; /*from .ui-widget-content*/
}

div.infoBox .content {
	text-align: center;
	border-left: 1px solid #695649; /*based on .ui-state-header*/
	border-right: 1px solid #695649; /*based on .ui-state-header*/
}

.bottomSpacer {
	height: 10px;
}

div.infoBox .subInfo, #userCP .subInfo {
  font-size: 12px;
}

.statTable {
}

.statTable ul, .statTable li {
  margin: 0;
  padding: 0;
  list-style: none;
  display: inline;
}

.statTable caption, .statTableCaption {
  text-align: left;
  font-weight: normal;
  font-size: 20px;
  white-space:nowrap;
  font-weight: bolder;
}

.statTableContainer {
  float: left;
  position: relative;
  margin-bottom: 2em;
  margin-right: 1em;
}

#mapViewerContainer {
  padding: 3px;
}

#logViewerInfoBox {
  float: left;
}

br.hardSeparator {
  clear: both;
}

#playerName {
  font-size: 20px;
  font-weight: bold;
}

#playerName .description {
  font-size: 20px;
  font-weight: normal;
}

#header {
	border: 1px solid #695649; /*from .ui-widget-header*/
	background: #1c160d url(/css/images/ui-bg_gloss-wave_20_1c160d_500x100.png) 50% 50% repeat-x; /*from .ui-state-default*/
	font-weight: bold; /*from .ui-widget-header*/
	color: #79b3d2; /*from .ui-state-default*/
	
	padding: 5px;
	margin-bottom: 1em;
}

img {
  border: 0;
}

#header a {
  color: #79b3d2; /*from .ui-state-default*/
}
			
#homeLink {
	float: left;
	font-size: 20pt;
}

#userCP, .fRight {
	float: right;
}

#userCP ul, #userCP li {
  display: inline;
  list-style-type: none;
  margin: 0;
}

#userCP strong a, #userCP strong, .status strong {
  font-weight: bolder;
  color: #ffff38;
}

.zeroValue {
  opacity: .2;
}

.nonZeroValue {
  font-weight: bold;
}

#pageLogin {
  width: 300px;
  margin-left: auto;
  margin-right: auto;
}

.avatarImage {
  float: left;
  margin-right: 5px;
  width: 16px;
  height: 16px;
}

.playerClassImg {
  float: left;
}

#playerStats thead .avatarImage {
  float: left;
  margin: 0;
}

#ui-tooltip-mapViewerTooltip {
  white-space: nowrap;
  max-width: 1000px;
}

#ui-tooltip-mapViewerTooltip .details {
  font-size: 8px;
}

#ui-tooltip-mapViewerTooltip .cblue {
  color: #79b3d2;
}

#ui-tooltip-mapViewerTooltip .cred {
  color: #d06553;
}

.logMetaData {
  float: right;
}

.logInfo {
  clear: both;
}

#recentlyAdded {
  width: 350px;
  float: left;
}

#topUploaders {
  width: 200px;
  float: left;
}

#actions {
  width: 125px;
  float: left;
}

#infoBoxContainer {
  width: 600px;
  margin-left: auto;
  margin-right: auto;
}

#infoBoxContainer .infoBox{
  margin-right: 10px;
}

#infoBoxContainer ol {
  margin: 0;
  padding: 0;
  list-style-position: inside;
}

#infoBoxContainer ul {
  display: inline;
  list-style: none;
  margin: 0;
  padding: 0;
}

.alertBox {
  width: 400px;
  margin: 0 auto 1em auto;
  text-align: center;
}

#searchForm {
  width: 300px;
  margin-left: auto;
  margin-right: auto;
}

#searchForm th {
  text-align: right;
}

#searchForm td {
  text-align: left;
}

#searchResults {
  width: 400px;
  margin-left: auto;
  margin-right: auto;
}

#searchResults td {
  text-align: left;
}

#copyright, #copyright a {
  font-size: 10px;
  text-align: center;
}

#footer {
}

#uploadForm table {
  width: 320px; 
  margin-left: auto; 
  margin-right: auto;
}

#uploadForm th {
  text-align: right;
}



#playerNameCP {
  width: 300px;
  margin-left: auto;
  margin-right: auto;
  height: 100px;
}

#submittedCP {
  width: 400px;
  margin-left: auto;
  margin-right: auto;
}

.ui-autocomplete {
	max-height: 100px;
	overflow-y: auto;
	/* prevent horizontal scrollbar */
	overflow-x: hidden;
	/* add padding to account for vertical scrollbar */
	padding-right: 20px;
}

.plupload_file_name .logFormFieldContainer { position:relative; display: inline; }
.plupload_file_name label  { position:absolute; top:0px; left:5px;}

.DataTables_sort_wrapper {
  cursor: pointer;
}

/* to be used when background image is not desired. */
.ui-widget-content-nobg { 
  border: 1px solid #9c947c;
}
.ui-widget-content-nobg a { 
  color: #e3ddc9; 
}
.ui-widget-content-nobg, .ui-table-content, .ui-table-kills, .ui-table-deaths {
  background-color: #201913; 
  color: #e3ddc9;
}
.ui-table-content {
  border: 1px solid #695444;
}
.ui-table-kills {
  border-left: 1px solid #695444;
  border-bottom: 1px solid #695444;
  border-right: 1px dotted #433428;
}
.ui-table-deaths {
  border-bottom: 1px solid #695444;
}

.error_list {
  margin: 3px; 
  padding: 0; 
  list-style-position: inside;
}

.center {
  text-align: center;
}

.txtleft {
  text-align: left;
}

.txtright {
  text-align: right;
}

#uploader {
  width: 800px;
  margin-left: auto;
  margin-right: auto;
}

/*! tf2 tooltip style */
.ui-tooltip-tf2 .ui-tooltip-titlebar,
.ui-tooltip-tf2 .ui-tooltip-content{
	border-color: #9c947c;
	color: #e3ddc9;
}

	.ui-tooltip-tf2 .ui-tooltip-content{
		background-color: #201913;
	}

	.ui-tooltip-tf2 .ui-tooltip-titlebar{
		background-color: #201913;
	}

	.ui-tooltip-tf2 .ui-tooltip-icon{
		border-color: #9c947c;
	}

	.ui-tooltip-tf2 .ui-tooltip-titlebar .ui-state-hover{
		border-color: #9c947c;
	}

/*helper to push footer to bottom of page*/
* {
  margin: 0;
}
html, body {
  height: 100%;
}
.wrapper {
  min-height: 100%;
  height: auto !important;
  height: 100%;
  margin: 0 auto -2em;
}
#footer, #pushFooter {
  /*change to height here must also take place in margin -Xem in .wrapper */
  height: 2em;
  clear: both;
}

